11월 21일 오후 3시40분

--- a/middleProject/src/main/webapp/css/styles.css
+++ b/middleProject/src/main/webapp/css/styles.css
@@ -10826,3 +10826,24 @@ textarea.form-control-lg {
   
   
 }
+.headerImg{
+	width: 100%;
+	margin: 10px auto;
+	position: relative;
+}
+.headerImg img{
+	width: 80%;
+	padding-left: 400px;
+	vertical-align: middle;
+}
+.absoluteText{
+	position: absolute;
+	color:white;
+	top:70%;
+	left:50%;
+	width:100%;
+	transform: translate(-50%,-50%);
+	font-size:20px;
+	font-family:'ypseo';
+	text-align:center;
+}
